<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_today"
        android:orderInCategory="100"
        android:title="@string/today"
        android:icon="@drawable/ic_home_black_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_reload"
        android:orderInCategory="100"
        android:title="@string/reload"
        android:icon="@drawable/ic_refresh_black_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_calendar"
        android:orderInCategory="100"
        android:title="@string/calendar"
        android:icon="@drawable/ic_date_range_black_24dp"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_credit"
        android:orderInCategory="100"
        android:title="@string/credit"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_setting"
        android:orderInCategory="100"
        android:title="@string/setting"
        app:showAsAction="never" />

</menu>